crates/smth-integration-tests/src/snapshots/smth_integration_tests__parser__tests__parses_snap_with_multiple_capture_groups.snap
---
source: crates/smth-integration-tests/src/parser.rs
expression: "Script::parse(&[\"    :snap /(a)(b)/x\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Snap {
                count: 5,
                duration: 1s,
                color: false,
                expect: [],
                filters: [
                    Filter {
                        patt: Regex(
                            "(a)(b)",
                        ),
                        paint: "x",
                    },
                ],
            },
            raw: "    :snap /(a)(b)/x",
        },
    ],
}
