crates/smth-integration-tests/src/snapshots/smth_integration_tests__parser__tests__parses_snap_with_multiple_filters.snap
---
source: crates/smth-integration-tests/src/parser.rs
expression: "Script::parse(&[\"    :snap /foo/x  |baz|q\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Snap {
                count: 5,
                duration: 1s,
                color: false,
                expect: [],
                filters: [
                    Filter {
                        patt: Regex(
                            "foo",
                        ),
                        paint: "x",
                    },
                    Filter {
                        patt: Regex(
                            "baz",
                        ),
                        paint: "q",
                    },
                ],
            },
            raw: "    :snap /foo/x  |baz|q",
        },
    ],
}
