crates/smth-integration-tests/src/snapshots/smth_integration_tests__parser__tests__parses_write_directive.snap
---
source: crates/smth-integration-tests/src/parser.rs
expression: "Script::parse(&[\"    :write tmp/hello.txt\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Write {
                path: "tmp/hello.txt",
            },
            raw: "    :write tmp/hello.txt",
        },
    ],
}
