crates/smth-integration-tests/src/snapshots/smth_integration_tests__parser__tests__rejects_invalid_snap_expectation.snap
---
source: crates/smth-integration-tests/src/parser.rs
expression: "Script::parse(&[\"    :snap -e ready -e '['\", \"\"].join(\"\\n\"))"
---
Script {
    lines: [
        Line {
            kind: Error {
                message: "error: invalid value '[' for '--expect <REGEX>': regex parse error:\n    [\n    ^\nerror: unclosed character class\n\nFor more information, try '--help'.\n",
            },
            raw: "    :snap -e ready -e '['",
        },
    ],
}
